[gd_scene load_steps=7 format=3 uid="uid://cfwssh53iuf8x"]

[ext_resource type="Script" path="res://addons/dialogic/Editor/Settings/SettingsEditor.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://duj8nl0vpms35" path="res://addons/dialogic/Editor/Common/TLabel.tscn" id="2"]
[ext_resource type="PackedScene" path="res://addons/dialogic/Editor/Settings/Settings_General.tscn" id="3"]
[ext_resource type="Script" path="res://addons/dialogic/Editor/Settings/Settings_Translations.gd" id="4"]

[sub_resource type="Image" id="Image_fkcse"]
data = {
"data": PackedByteArray(255, 255, 255, 0, 255, 255, 255, 0, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 131, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 131, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 131, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 231, 255, 93, 93, 55, 255, 97, 97, 58, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 231, 255, 94, 94, 54, 255, 94, 94, 57, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 93, 93, 233, 255, 93, 93, 232, 255, 93, 93, 41, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 93, 93, 233, 255, 93, 93, 232, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 97, 97, 42, 255, 255, 255, 0, 255, 97, 97, 42, 255, 97, 97, 42, 255, 255, 255, 0, 255, 98, 98, 47, 255, 97, 97, 42, 255, 255, 255, 0, 255, 97, 97, 42, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 235, 255, 93, 93, 233, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 94, 94, 46, 255, 93, 93, 236, 255, 93, 93, 233, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 95, 95, 59, 255, 96, 96, 61, 255, 93, 93, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 95, 95, 59, 255, 96, 96, 61, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_v3a27"]
image = SubResource("Image_fkcse")

[node name="SettingsEditor" type="Popup"]
title = "Dialogic Settings"
size = Vector2i(700, 500)
borderless = false
min_size = Vector2i(700, 500)
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Tabs" type="TabContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="General" parent="Panel/Tabs" instance=ExtResource("3")]
offset_top = 31.0

[node name="Translations" type="HBoxContainer" parent="Panel/Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("4")

[node name="VBox" type="VBoxContainer" parent="Panel/Tabs/Translations"]
size_flags_horizontal = 3

[node name="Title" parent="Panel/Tabs/Translations/VBox" instance=ExtResource("2")]
anchor_right = 0.0
anchor_bottom = 0.0
text = ""
text_key = "Tra"
mode = 0

[node name="HSeparator2" type="HSeparator" parent="Panel/Tabs/Translations/VBox"]

[node name="VBox" type="HBoxContainer" parent="Panel/Tabs/Translations/VBox"]

[node name="Title3" parent="Panel/Tabs/Translations/VBox/VBox" instance=ExtResource("2")]
anchor_right = 0.0
anchor_bottom = 0.0
size_flags_horizontal = 3
text = ""
text_key = "Tra"
mode = 0

[node name="TransOrigLanguage" type="LineEdit" parent="Panel/Tabs/Translations/VBox/VBox"]
unique_name_in_owner = true
text = "de_DE"
caret_blink = true
caret_blink_speed = 0.5

[node name="VBox2" type="HBoxContainer" parent="Panel/Tabs/Translations/VBox"]

[node name="Title3" parent="Panel/Tabs/Translations/VBox/VBox2" instance=ExtResource("2")]
anchor_right = 0.0
anchor_bottom = 0.0
size_flags_horizontal = 3
text = ""
text_key = "Tra"
mode = 0

[node name="TransFileMode" type="OptionButton" parent="Panel/Tabs/Translations/VBox/VBox2"]
unique_name_in_owner = true

[node name="TransInitialize" type="Button" parent="Panel/Tabs/Translations/VBox"]
unique_name_in_owner = true
size_flags_horizontal = 8
text = "Initialize translations"

[node name="Info2" parent="Panel/Tabs/Translations/VBox" instance=ExtResource("2")]
anchor_right = 0.0
anchor_bottom = 0.0
text = ""
text_key = "Tra"
mode = 0

[node name="VSeparator" type="VSeparator" parent="Panel/Tabs/Translations"]

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Tabs/Translations"]
size_flags_horizontal = 3

[node name="Title2" parent="Panel/Tabs/Translations/VBoxContainer" instance=ExtResource("2")]
anchor_right = 0.0
anchor_bottom = 0.0
text = ""
text_key = "Tra"
mode = 0

[node name="HSeparator" type="HSeparator" parent="Panel/Tabs/Translations/VBoxContainer"]

[node name="VBox4" type="HBoxContainer" parent="Panel/Tabs/Translations/VBoxContainer"]

[node name="Title3" parent="Panel/Tabs/Translations/VBoxContainer/VBox4" instance=ExtResource("2")]
anchor_right = 0.0
anchor_bottom = 0.0
size_flags_horizontal = 3
text = ""
text_key = "Tra"
mode = 0

[node name="TransEnabled" type="CheckBox" parent="Panel/Tabs/Translations/VBoxContainer/VBox4"]
unique_name_in_owner = true

[node name="VBox3" type="HBoxContainer" parent="Panel/Tabs/Translations/VBoxContainer"]

[node name="Title3" parent="Panel/Tabs/Translations/VBoxContainer/VBox3" instance=ExtResource("2")]
anchor_right = 0.0
anchor_bottom = 0.0
size_flags_horizontal = 3
text = ""
text_key = "Tra"
mode = 0

[node name="TransFileFolder" type="LineEdit" parent="Panel/Tabs/Translations/VBoxContainer/VBox3"]
unique_name_in_owner = true
max_length = 50
editable = false
expand_to_text_length = true
caret_blink = true
caret_blink_speed = 0.5

[node name="TransFileFolderChanger" type="Button" parent="Panel/Tabs/Translations/VBoxContainer/VBox3"]
unique_name_in_owner = true
disabled = true
icon = SubResource("ImageTexture_v3a27")

[node name="TransUpdate" type="Button" parent="Panel/Tabs/Translations/VBoxContainer"]
unique_name_in_owner = true
disabled = true
text = "Update translations"

[node name="TransRemove" type="Button" parent="Panel/Tabs/Translations/VBoxContainer"]
unique_name_in_owner = true
disabled = true
text = "Remove translations"

[node name="VSeparator2" type="VSeparator" parent="Panel/Tabs/Translations"]

[node name="VBox2" type="VBoxContainer" parent="Panel/Tabs/Translations"]
size_flags_horizontal = 3

[node name="Title" parent="Panel/Tabs/Translations/VBox2" instance=ExtResource("2")]
anchor_right = 0.0
anchor_bottom = 0.0
text = ""
text_key = "Tra"
mode = 0

[node name="HSeparator3" type="HSeparator" parent="Panel/Tabs/Translations/VBox2"]

[node name="Info" parent="Panel/Tabs/Translations/VBox2" instance=ExtResource("2")]
anchor_right = 0.0
anchor_bottom = 0.0
text = ""
text_key = "Tra"
mode = 0
